hero section by ireneakoth

--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
 <html>
 <head>
-<title>irene akoth website
+<title>ireneakoth website</title>
 </title>
+<link rel="stylesheet"type="text/css"href="Styles .css">
 </head>
 <body>
-<h1>irene akoth</h1>
-<p>my first webpage github</p.
+<!--nav bar-->
+<nav class="navbar">
+<div class="logo">irene</div>
+<ul class="nav-links">
+<li><a href="index.html">home</li></a>
+<li><a href="about.html">about</li></a>
+<li><a href="services.html">services</li></a>
+<li><a href="contact.html">contact</li></a>	
 </body>
 </html>
+
+<!--hero section-->
+<section id="hero class="hero-section"</section>
+	<div class="hero content">
+		<hi>welcome to my website</hi>
+		<p>NO ONE CAN MAKE YOU INFERIOR WITHOUT YOUR CONSENT</p>
+		<a href="about class=btn-primary">learn more></a>
+
