--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
        <!--about section-->
        <section id="about class =" about section>
        <div class="=image-container">
-       	<imj src="images/profile.jfif>
+       	<imj src="
        	</div>
        	<div class="text-container>
        		
@@ -47,19 +47,19 @@
         <h2>Our Services</h2>
         <div class="services-container">
             <div class="service-box">
-                <img src="service1.png" alt="Service 1">
+                <img src="images/gls.jfif" alt="service 1">
                 <h3>criminal law</h3>
                 <p>defending criminals in court</p>
                 <a href="#">Read More</a>
             </div>
             <div class="service-box">
-                <img src="service2.png" alt="Service 2">
+                <img src="images/ram.jfif" alt="service 2">
                 <h3>family law</h3>
                 <p>settling family disputes,divorce</p>
                 <a href="#">Read More</a>
             </div>
             <div class="service-box">
-                <img src="service3.png" alt="Service 3">
+                <img src="images/amg.jfif" alt="service 3">
                 <h3>personal injury law</h3>
                 <p>defending people who ha been involved in accidents</p>
                 <a href="#">Read More</a>
@@ -89,6 +89,45 @@
             </ul>
         </div>
     </section>
+    <!--contact section-->
+    <section id="contact-section" class="contact-section">
+    	<h2>contact me</h2>
+    	<p>if you have any question or you want to get in touch with me feel free to contact me or send a message</p>
+    	<div class="contact-container">
+    	</div>
+    		<div class="contact-info">
+    		</div>
+    			<div class="contact-card">
+    				<span class="icon"></span>
+    				<p><b>Email:</b>ireneakoth@gmail.com</p>
+    			</div>
+
+               <div class="contact-card">
+    				<span class="icon"></span>
+    				<p><b>telephone:</b>0768465239</p>
+    			</div>
+    			<div class="contact-card">
+    				<span class="icon"></span>
+    				<p><b>adress:</b>kabiria,nairobi,kenya</p>
+    				<!--contact form-->
+    				<div class="contact-form">
+    				<form action="#" method="post">
+    					<
+    					<div class="form-group">
+    						<label for="name">Name</label>
+    						<input type="text"id="name"name="name" required>
+    					<div class="form-group">
+    						<label for="email">Email</label>
+    						<input type="email"id="email"email="email" required>
+    					<div class="form-group">
+    						<label for="message">message</label>
+    						<textarea id="message"message="message" rows="5"required></textarea>
+    					</div>
+    					<button type="submit">send message</button>
+    				</form>
+    			</div>
+    		</div>
+    	</section>
 
 </body>
-</ht>ml
+</html>
